@@ -27,22 +27,35 @@
        (m/merge-command! @m/app spec#))))
 
 ;;; TODO register for deletion in  m/*elements* (a set)
-(defmacro defhandler [command var-symbol]
+(defmacro defhandler
+  "Defines a handler for the command. Takes a single additional argument
+   that must be either a var symbol, or a closure that will be automatically
+   bound to a var."
+  [command var-symbol-or-closure]
   (let [cmd-id (str *ns* "/" command)
-        id (str cmd-id "-handler")]
-    `(let [spec# (-> {:contribution-URI
-                      ~(str "bundleclass://ccw.core/clojure/ccw.e4.dsl/handler-factory/"
-                            (or (namespace var-symbol) (ns-name *ns*)) "/" (name var-symbol))
-                      :command ~cmd-id
-                      :id ~id}
-                   (update-in [:transient-data]
-                             assoc
-                             "ccw/load-key" *load-key*)
-                  (update-in [:tags]
-                             (fnil conj #{})
-                             "ccw"))]
-       ;(println "spec#:" spec#)
-      (m/merge-handler! @m/app spec#))))
+        id (str cmd-id "-handler")
+        create-var? (not (symbol? var-symbol-or-closure))
+        var-symbol (if create-var?
+                     (gensym id)
+                     var-symbol-or-closure)
+        platform-uri (str "bundleclass://ccw.core/clojure/ccw.e4.dsl/handler-factory/"
+                       (or (namespace var-symbol) (ns-name *ns*)) "/" (name var-symbol))]
+    `(do
+       ~(when create-var?
+          `(def ~var-symbol
+             ~(str "Var generated by CCW to hold the closure " var-symbol-or-closure)
+             ~var-symbol-or-closure))
+       (let [spec# (-> {:contribution-URI ~platform-uri
+                        :command ~cmd-id
+                        :id ~id}
+                     (update-in [:transient-data]
+                       assoc
+                       "ccw/load-key" *load-key*)
+                     (update-in [:tags]
+                       (fnil conj #{})
+                       "ccw"))]
+         ;(println "spec#:" spec#)
+         (m/merge-handler! @m/app spec#)))))
 
 ;; TODO support options !!!
 (defmacro defkeybinding 
